fixed spacing/overlap issues in signup

--- a/learnlink-ui/src/pages/signup.css
+++ b/learnlink-ui/src/pages/signup.css
@@ -1,41 +1,45 @@
-/* Signup css */
 body{
-  background-color: #D4EAF7;
-}
-  
-.signup {
-  background-color: #D4EAF7;
   margin: 0;
   padding: 0;
+  background-color: #D4EAF7;
+}
+
+.signup {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  background-color: #D4EAF7;
+  overflow-y: auto;
+  flex-grow: 1;  /* Allow to grow if space is available */
   overflow-y: scroll;
-  flex-grow: 1;
 }
 
 .signupPage {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  max-height: 100vh;
 }
 
 .signup-container {
   width: 80vw;
   padding: 20px;
   display: flex;
-  align-items: center;
-  text-align: left;
+  flex-direction: column;
+  align-items: center; /* This will center the form contents */
+  text-align: left; /* Centers the text inside the container */
+  /* margin-bottom: 50px; */
   justify-content: center;
+  max-width: 800px;
 }
 
-.l1 {
+.signup-container .l1 {
   width: 100%;
   height: auto;
   font-family: 'Inter';
   font-weight: 500;
-  font-size: 40pt;
+  font-size: 64px;
   line-height: 1.2;
   text-align: left;
   margin-bottom: 5px;
@@ -50,9 +54,12 @@ body{
   text-align: left;
   line-height: 1.2;
   margin-top: 5px;
+  margin-bottom: 30px;
   color: #3B3C3D;
 }
-  
+
+  /* give email and password spacing between the input type */
+
 label {
   width: auto;
   height: auto;
@@ -68,19 +75,39 @@ label {
 }
 
 .signup-form {
-  height: auto;
   display: flex;
   flex-direction: column;
   flex: 1;
   width:100%;
   max-width: 800px;
 }
-
-.signup-form input {
+.signup-form input, .signup-form .nameFields input  {
+  width: 100%;
   height: 25px;
   margin-bottom: 15px;
+  padding: 5px;
   border: .7px solid #3B3C3D;
   border-radius: 1px;
+}
+.fp {
+  width: 450px;
+  display: flex;
+  justify-content: right;
+  margin: 12px 0px;
+}
+.fp label {
+  text-align: right;
+  font-size: 14px;
+}
+.or {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 15px 0;
+}
+.or label {
+  font-size: 16px;
+  text-align: center;
 }
 
 .signUpButton {
@@ -93,6 +120,36 @@ label {
   font-weight: 500;
 }
 
+
+.Logo2-signup {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  margin: 20px 20px;
+  box-sizing: border-box;
+  height:auto;
+
+}
+.Logo2-signup svg {
+  width:150px;
+
+}
+
+
+
 .loginRedirect{
   padding-top: 10px;
 }
+
+.alert {
+  float:right;
+  color:brown;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.error {
+  text-align: left;
+  padding-left: 0;
+}
+  
